# Pimentao_Verde

./: .gitignore  BUILD.md  CMakeLists.txt  CREDITS.md  README.md  build_all.sh  logo.xpm  make_bin.sh  make_competition_package.sh  team_logo.xpm
.github/workflows/: cmake.yml  test.yml
lib/: .gitignore  CMakeLists.txt  How2ForkPV.md  README.md
lib/.github/workflows/: cmake.yml
lib/rcsc/action/: body_hold_ball2008.cpp  body_intercept2009.cpp  body_intercept2009.h
lib/rcsc/common/: audio_memory.cpp  audio_memory.h  logger.h  player_type.cpp  player_type.h  stamina_model.cpp
lib/rcsc/player/: CMakeLists.txt  abstract_player_object.cpp  abstract_player_object.h  action_effector.cpp  action_effector.h  ball_object.cpp  ball_object.h  cut_ball_calculator.h  intercept.h  intercept_simulator_player.cpp  intercept_simulator_player.h  intercept_table.h  intercept_table_cyrus.cpp  intercept_table_cyrus.h  localization.h  localization_default.cpp  player_agent.cpp  player_agent.h  player_command.cpp  player_command.h  player_config.cpp  player_config.h  player_intercept_cyrus.cpp  player_intercept_cyrus.h  player_object.cpp  player_object.h  see_logger.h  (+9 more)
script/: build_all.sh  make_bin.sh  make_bin_local_lib.sh  make_competition_package.sh  run_local.sh  setup_libpath.sh  start
script/data_extractor/: 2DOffense.py  new_pack3.py  read_data_pack.py  test_dnn.py
script/log_extractor/: main.py
src/: CMakeLists.txt  auto.sh  bhv_basic_move.cpp  bhv_basic_move.h  bhv_basic_offensive_kick.cpp  bhv_basic_offensive_kick.h  calculate_offensive_opponents.cpp  calculate_offensive_opponents.h  coach.conf  debugs.h  github.sh  intention_receive.cpp  intention_receive.h  main_coach.cpp  main_player.cpp  main_trainer.cpp  pimentao_team_identity.h  player.conf  sample_coach.cpp  sample_coach.h  sample_communication.cpp  sample_communication.h  sample_field_evaluator.cpp  sample_field_evaluator.h  sample_player.cpp  sample_player.h  sample_trainer.cpp  sample_trainer.h  setting.cpp  setting.h  start.sh.in  strategy.cpp  strategy.h  train.sh.in
src/basic_actions/: body_dribble2008.cpp  body_go_to_point.cpp  body_go_to_point.h  body_hold_ball2008.cpp  body_intercept.h  body_intercept2009.cpp  body_intercept2009.h  body_intercept_plan.cpp  body_intercept_plan.h  body_turn_to_tackle.cpp  body_turn_to_tackle.h
src/chain_action/: DataExtractor.cpp  DataExtractor.h  actgen_direct_pass.cpp  actgen_improved_dribble.cpp  actgen_improved_dribble.h  actgen_shoot.cpp  actgen_simple_dribble.cpp  action_chain_graph.cpp  action_chain_graph.h  action_chain_holder.cpp  action_chain_holder.h  action_generator.h  action_state_pair.h  bhv_chain_action.cpp  bhv_chain_action.h  bhv_improved_dribble.cpp  bhv_improved_dribble.h  bhv_normal_dribble.cpp  bhv_normal_dribble.h  bhv_one_vs_one_feint.cpp  bhv_one_vs_one_feint.h  bhv_open_goal_shoot.cpp  bhv_open_goal_shoot.h  bhv_pass_kick_find_receiver.cpp  bhv_pass_kick_find_receiver.h  bhv_smart_shoot.cpp  bhv_smart_shoot.h  bhv_strict_check_shoot.cpp  bhv_strict_check_shoot.h  body_force_shoot.cpp  clear_generator.cpp  cooperative_action.cpp  cooperative_action.h  cross_generator.cpp  cross_generator.h  dribble.cpp  dribble.h  field_analyzer.cpp  field_analyzer.h  field_evaluator.h  (+20 more)
src/data/settings/: Help.json  Other.json  alice.json  fra.json  hel.json  helios2025.json  oxsy.json  pimentao_verde.json  teams.conf  titas.json  titas_v2.json  yush.json
src/data_extractor/: DEState.h  offensive_data_extractor.cpp  offensive_data_extractor.h  offensive_data_extractor_v1.cpp  offensive_data_extractor_v1.h
src/debug/: game_analysis_context.cpp  game_analysis_context.h  game_analysis_logger.cpp  game_analysis_logger.h
src/denoising/: localization_denoiser.cpp  localization_denoiser.h  localization_denoiser_by_action.cpp  localization_denoiser_by_action.h  localization_denoiser_by_area.cpp  localization_denoiser_by_area.h
src/formations-dt/: F352_defense-formation.conf  F352_kickin-our-formation.conf  F352_offense-formation.conf  F433_offense-formation_for_yush.conf  F523_before-kick-off.conf  F523_defense-formation.conf  F523_defense-formation_no5.conf  F523_defense-formation_no56.conf  F523_defense-formation_no6.conf  F523_goal-kick-opp.conf  F523_goal-kick-our.conf  F523_kickin-our-formation.conf  F523_setplay-opp-formation.conf  Fhel_defense-formation.conf  Fhel_kickin-our-formation.conf  Fhel_setplay-our-formation.conf
src/goalie/: bhv_goalie_basic_move.cpp  bhv_goalie_basic_move.h  bhv_goalie_chase_ball.cpp  bhv_goalie_chase_ball.h  bhv_goalie_free_kick.cpp
src/lib/: pimentao_verde_audio_memory.h  pimentao_verde_say_message_builder.cpp  pimentao_verde_say_message_builder.h  pimentao_verde_say_message_parser.cpp  pimentao_verde_say_message_parser.h
src/move_def/: best_match_finder.cpp  best_match_finder.h  bhv_basic_tackle.cpp  bhv_basic_tackle.h  bhv_block.cpp  bhv_block.h  bhv_defensive_move.cpp  bhv_defensive_move.h  bhv_mark_decision_greedy.cpp  bhv_mark_decision_greedy.h  bhv_mark_decisions.cpp  bhv_mark_execute.cpp  bhv_mark_execute.h  bhv_mark_intention.h  bhv_tackle_intercept.h  mark_position_finder.cpp  mark_position_finder.h  pimentao_verde_interceptable.cpp  pimentao_verde_interceptable.h
src/move_off/: bhv_offensive_move.cpp  bhv_offensive_move.h  bhv_scape.cpp  bhv_scape.h  bhv_scape_voronoi.cpp  bhv_scape_voronoi.h  bhv_unmark.cpp  bhv_unmark.h  bhv_unmark2019.cpp  bhv_unmark2019.h  bhv_unmark_voronoi.h
src/neck/: neck_decision.cpp  neck_decision.h  neck_offensive_intercept_neck.cpp  next_pass_predictor.cpp  next_pass_predictor.h  view_tactical.cpp
src/roles/: role_goalie.cpp  role_player.cpp  role_player.h  role_sample.cpp  soccer_role.cpp
src/setplay/: bhv_custom_before_kick_off.cpp  bhv_custom_before_kick_off.h  bhv_go_to_static_ball.cpp  bhv_penalty_kick.cpp  bhv_penalty_kick.h  bhv_set_play.cpp  bhv_set_play_free_kick.cpp  bhv_set_play_free_kick.h  bhv_set_play_goal_kick.cpp  bhv_set_play_indirect_free_kick.cpp  bhv_set_play_kick_in.cpp  bhv_set_play_kick_in.h  bhv_set_play_kick_off.cpp  bhv_their_goal_kick_move.cpp
(+2 files in other folders)
