cmake_minimum_required(VERSION 3.5)

project(pimentao_verde VERSION 2022.01)

if(CMAKE_VERSION VERSION_LESS "3.7.0")
    set(CMAKE_INCLUDE_CURRENT_DIR ON)
endif()

# compliler options
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED True)

if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE "Release" CACHE STRING "" FORCE)
endif()
set(CMAKE_CXX_FLAGS "-W -Wall")

# check librcsc
if(NOT DEFINED TEAM_DIR_LIB)
	set(TEAM_DIR_LIB "")
endif()
set(LIB_DIR "${TEAM_DIR_LIB}")
message("${TEAM_DIR_LIB}")
if(LIB_DIR STREQUAL "")
  set(LIB_DIR
    "${CMAKE_SOURCE_DIR}/pimentao_verde_lib"
    "$ENV{HOME}/.local/pimentao_verde_lib"
    "$ENV{HOME}/local/pimentao_verde_lib"
    "$ENV{HOME}/local/cyruslib"
    )
endif()
set(LIBRCSC_INSTALL_DIR "${LIB_DIR}" CACHE PATH "The path where librcsc is installed.")

find_library(LIBRCSC_LIB NAMES rcsc
  PATHS ${LIBRCSC_INSTALL_DIR}
  PATH_SUFFIXES lib
  )
if(NOT LIBRCSC_LIB)
  message(FATAL_ERROR
    "librcsc não encontrada. Corra: ./script/build_all.sh\n"
    "  (instala em ${CMAKE_SOURCE_DIR}/pimentao_verde_lib)\n"
    "  Procurado em: ${LIBRCSC_INSTALL_DIR}")
endif()
get_filename_component(LIBRCSC_LIBDIR ${LIBRCSC_LIB} DIRECTORY)

find_path(LIBRCSC_INCLUDE_DIR
  NAME rcsc/types.h
  PATHS ${LIBRCSC_INSTALL_DIR}
  PATH_SUFFIXES include
  )
if(NOT LIBRCSC_INCLUDE_DIR)
  message(FATAL_ERROR "librcsc include dir not found!")
endif()

# remove variables from GUI
mark_as_advanced(
  LIBRCSC_LIB
  LIBRCSC_INCLUDE_DIR
  LIBRCSC_LIBDIR
  )

# boost
find_package(Boost 1.36.0 COMPONENTS system REQUIRED)
if(NOT Boost_FOUND)
  message(FATAL_ERROR "Boost not found!")
endif()

# zlib
find_package(ZLIB)
if(ZLIB_FOUND)
  set(HAVE_LIBZ TRUE)
endif()

# generate config.h
add_definitions(-DHAVE_CONFIG_H)
configure_file(
  ${PROJECT_SOURCE_DIR}/cmake-config.h.in
  ${PROJECT_BINARY_DIR}/config.h
  )

# check the settings
message(STATUS "Found librcsc:")
message(STATUS "  LIBRCSC_LIBDIR=${LIBRCSC_LIBDIR}")
message(STATUS "  LIBRCSC_LIB=${LIBRCSC_LIB}")
message(STATUS "  LIBRCSC_INCLUDE_DIR=${LIBRCSC_INCLUDE_DIR}")
message(STATUS "Build settings:")
message(STATUS "  BUILD_TYPE=${CMAKE_BUILD_TYPE}")

include("${CMAKE_SOURCE_DIR}/vendor/rapidjson.cmake")
include_directories(
    ${RAPIDJSON_INCLUDE_DIR}
)


# sub directories
add_subdirectory(src)
